add user modals

--- a/web/app/themes/huskies-theme/styles/modal.less
+++ b/web/app/themes/huskies-theme/styles/modal.less
@@ -70,7 +70,7 @@
 body.modal--open {
   overflow: hidden;
 
-  .modal__wrapper {
+  .modal__wrapper.modal--visible {
     opacity: 1;
     visibility: visible;
   }
