--- a/web/app/themes/huskies-theme/views/forum/replies.twig
+++ b/web/app/themes/huskies-theme/views/forum/replies.twig
@@ -7,7 +7,7 @@
 
 {% if page.user.can.access_reply_form %}
   {% block header_top_link %}
-    {{ header_top_link('plus', '#modal') }}
+    {{ header_top_link('plus', '#modal-reply-form') }}
   {% endblock %}
 {% endif %}
 
