--- a/web/app/themes/huskies-theme/views/macro.twig
+++ b/web/app/themes/huskies-theme/views/macro.twig
@@ -89,7 +89,7 @@
   <div class="modal__wrapper" id="modal-{{ id }}">
     <div class="modal">
       <header class="modal__header">
-        <h2 class=modal__title"">{{ title }}</h2>
+        <h2 class="modal__title">{{ title }}</h2>
         <button class="modal__close modal__close--button" type="button">{{ icon('plus') }}</button>
       </header>
 
