add style for imprint

--- a/web/app/themes/huskies-theme/styles/main_menu.less
+++ b/web/app/themes/huskies-theme/styles/main_menu.less
@@ -110,6 +110,7 @@
 .current-menu-item > .main_menu__link,
 .main_menu__link:hover {
   background-color: @c-blue;
+  color: @c-white;
 }
 
 .main_menu__user {
