add calendar styling

--- a/web/app/themes/huskies-theme/styles/index.less
+++ b/web/app/themes/huskies-theme/styles/index.less
@@ -116,7 +116,7 @@ main {
 }
 
 @import "title";
-@import "simple_calendar";
+@import "calendar";
 @import "main_menu";
 @import "pagination";
 @import "gallery";
