--- a/web/app/themes/huskies-theme/styles/main_menu.less
+++ b/web/app/themes/huskies-theme/styles/main_menu.less
@@ -120,8 +120,9 @@
   border-radius: 50%;
   overflow: hidden;
   margin: 0 auto;
+  display: block;
 
-  > img {
+  img {
     width: 100%;
     height: 100%;
   }
