--- a/web/app/themes/huskies-theme/views/layout/main_menu.twig
+++ b/web/app/themes/huskies-theme/views/layout/main_menu.twig
@@ -1,17 +1,25 @@
 <div class="main_menu__overlay"></div>
 <nav class="main_menu">
   <ul class="main_menu__items">
-    <li class="main_menu__item main_menu__item--seperate">
-      {% if page.user.logged_in %}
-        <div class="main_menu__user">{{ page.user.profile.image }}</div>
+    {% if page.user.logged_in %}
+      <li class="main_menu__item main_menu__item--seperate">
+        <div class="main_menu__user">
+          <a href="{{ page.user.profile.url }}">{{ page.user.profile.image }}</a>
+        </div>
         <a class="main_menu__link" href="{{ page.user.profile.url }}"> {{ page.user.profile.name }} </a>
         <a class="main_menu__link" href="{{ page.logout_url }}"> {{ __('Logout', 'huskies') }} </a>
-      {% else %}
+      </li>
+      <li class="main_menu__item">
+        <a class="main_menu__link" href="{{ function('get_permalink', 2220) }} ">{{ __('Members', 'huskies') }}</a>
+      </li>
+    {% else %}
+      <li class="main_menu__item main_menu__item--seperate">
         <div class="main_menu__user"><img src="{{ site.theme.link }}/images/user.svg" alt="not logged in user" /></div>
         <a class="main_menu__link modal__trigger" href="#modal-login-form"> {{ __('Login', 'huskies') }} </a>
         <a class="main_menu__link modal__trigger" href="#modal-register-form"> {{ __('Register', 'huskies') }} </a>
-      {% endif %}
-    </li>
+      </li>
+    {% endif %}
+
     {% for item in menu.get_items %}
       <li class="main_menu__item {{ item.classes | join(' ') }}">
         <a class="main_menu__link" href="{{ item.get_link }}">{{ item.title }}</a>
