--- a/web/app/themes/huskies-theme/views/page/members.twig
+++ b/web/app/themes/huskies-theme/views/page/members.twig
@@ -8,7 +8,7 @@
       <h3>{{ user.name }}</h3>
     </a>
     <dl class="member__facts">
-      <dt>{{ __('E-mail address', 'huskies') }}</dt>
+      <dt>{{ __('E-mail Address', 'huskies') }}</dt>
       <dd>{{ user.email }}</dd>
       <dt>{{ __('Phonenumber', 'huskies') }}</dt>
       <dd>{{ user.phone }}</dd>
