--- a/web/app/themes/huskies-theme/styles/form.less
+++ b/web/app/themes/huskies-theme/styles/form.less
@@ -338,3 +338,173 @@
     .form__section--checkbox;
   }
 }
+
+.entry-title {
+  .form__section-headline;
+}
+
+#profile {
+  .section__title,
+  .entry-title,
+  h3 {
+    .h1;
+    margin: 50px 0 25px;
+    text-align: center;
+    font-size: @fs-xl;
+
+    @media @from-phablet {
+      font-size: @fs-xxl;
+    }
+  }
+}
+
+#user-edit-plugins {
+  .bbp-form {
+    .form__section;
+    text-align: left;
+
+    br {
+      display: none;
+    }
+
+    label {
+      text-align: left;
+      margin-bottom: 10px;
+    }
+
+    #bbp-digest-check-row,
+    #bbp-digest-when-selection,
+    #bbp-digest-day-list,
+    #bbp-digest-pool-selection,
+    #bbp-digest-forum-list,
+    #bbp-digest-time-row {
+      margin-bottom: 15px;
+      line-height: 1.5;
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: flex-start;
+      justify-content: flex-end;
+    }
+
+    #bbp-digest-check-row,
+    #bbp-digest-when-selection,
+    #bbp-digest-pool-selection,
+    #bbp-digest-forum-list {
+      .form__section--checkbox;
+    }
+
+    #bbp-digest-day-list,
+    #bbp-digest-time-row {
+      .form__section--select;
+    }
+
+    #bbp-digest-day-list,
+    #bbp-digest-time-row {
+      .description {
+        margin-bottom: 15px;
+      }
+
+      select {
+        margin: 0;
+      }
+    }
+
+    #bbp-digest-time-row {
+      margin-bottom: 15px;
+      flex-direction: column;
+
+      label {
+        margin-bottom: 15px;
+      }
+
+      .description {
+        display: none;
+      }
+    }
+  }
+
+  .form-table {
+    display: block;
+
+    tbody {
+      display: block;
+    }
+
+    tr:first-of-type {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      > th:first-child {
+        display: none;
+      }
+
+      #simple-local-avatar-photo {
+        width: auto !important;
+        margin-right: 15px;
+        margin-bottom: 15px;
+
+        > img {
+          border-radius: 50%;
+          box-shadow: 0 0 10px 1px fade(@c-black, 50%);
+        }
+      }
+
+      > td:last-child {
+        display: block;
+        width: 100%;
+
+        > p {
+          width: auto !important;
+          margin-bottom: 10px;
+          display: block !important;
+          text-align: center;
+
+          &:first-of-type {
+            margin-top: -10px;
+          }
+
+          .description {
+            display: none;
+          }
+
+          #simple-local-avatar {
+            position: relative;
+            height: 40px;
+            width: 100%;
+            max-width: 250px;
+
+            &::after {
+              content: 'Neues Profilbild';
+              .button;
+              .button--primary;
+              position: absolute;
+              left: 0;
+              top: 0;
+              width: 100%;
+              height: 100%;
+              cursor: pointer;
+              text-align: center;
+              outline: none;
+            }
+          }
+
+          #simple-local-avatar-remove {
+            width: 100%;
+            max-width: 250px;
+            text-align: center;
+            height: 40px;
+          }
+        }
+      }
+    }
+    tr:last-of-type {
+      display: none;
+    }
+  }
+}
+#bbp_user_edit_submit {
+  text-indent: 0;
+}
