--- a/web/app/themes/huskies-theme/views/forum/user.twig
+++ b/web/app/themes/huskies-theme/views/forum/user.twig
@@ -6,30 +6,29 @@
 {% endblock %}
 
 {% block forum_header %}
-  {% if user.can_edit %}
-    <section class="section section--inverse">
-      <ul class="member__nav">
-        {% if page.bbpress.form.favorites_active %}
-          <li class="member__nav-item {{ page.bbpress.user_pages.is_favorites ? 'current' }}">
-            <a class="member__nav-link" href="{{ user.favorites_link }}">{{ __('Favorites', 'huskies') }}</a>
-          </li>
-        {% endif %}
-
-        {% if page.bbpress.form.subscriptions_active %}
-          <li class="member__nav-item {{ page.bbpress.user_pages.is_subscriptions ? 'current' }}">
-            <a class="member__nav-link" href="{{ user.subscriptions_link }}">{{ __('Subscriptions', 'huskies') }}</a>
-          </li>
-        {% endif %}
-
-        <li class="member__nav-item {{ page.bbpress.user_pages.is_edit ? 'current' }}">
-          <a class="member__nav-link" href="{{ user.edit_link }}">{{ __('Edit', 'huskies') }}</a>
-        </li>
-      </ul>
-    </section>
-  {% endif %}
 {% endblock %}
 
 {% block forum_content %}
+  {% if user.can_edit %}
+    <ul class="user-nav">
+      {% if page.bbpress.form.favorites_active %}
+        <li class="user-nav__item {{ page.bbpress.user_pages.is_favorites ? 'current' }}">
+          <a class="user-nav__link" href="{{ user.favorites_link }}">{{ __('Favorites', 'huskies') }}</a>
+        </li>
+      {% endif %}
+
+      {% if page.bbpress.form.subscriptions_active %}
+        <li class="user-nav__item {{ page.bbpress.user_pages.is_subscriptions ? 'current' }}">
+          <a class="user-nav__link" href="{{ user.subscriptions_link }}">{{ __('Subscriptions', 'huskies') }}</a>
+        </li>
+      {% endif %}
+
+      <li class="user-nav__item {{ page.bbpress.user_pages.is_edit ? 'current' }}">
+        <a class="user-nav__link" href="{{ user.edit_link }}">{{ __('Edit', 'huskies') }}</a>
+      </li>
+    </ul>
+  {% endif %}
+
   {% if not user.can_edit %}
     {% include 'forum/user/profile.twig' %}
   {% elseif page.bbpress.user_pages.is_favorites %}
