add more content to 404 and abort pages and add admin link

--- a/web/app/themes/huskies-theme/styles/header.less
+++ b/web/app/themes/huskies-theme/styles/header.less
@@ -2,7 +2,8 @@
   height: @height-header / 2.5;
 }
 
-.home .header-main {
+.home .header-main,
+.error404 .header-main {
   height: @height-header;
 }
 
