--- a/web/app/themes/huskies-theme/views/macro.twig
+++ b/web/app/themes/huskies-theme/views/macro.twig
@@ -103,3 +103,12 @@
     </div>
   </div>
 {% endmacro %}
+
+{% macro abort(reasone) %}
+  <ul class="slideshow">
+    <li class="slideshow__item slideshow__item--visible" style="background-image: url('http://i.giphy.com/SrDqGrlWwvMbe.gif');">
+      <a href="http://giphy.com/gifs/cookie-monster-big-bird-please-do-not-try-this-at-home-SrDqGrlWwvMbe" class="slideshow__link">
+      </a>
+    </li>
+  </ul>
+{% endmacro %}
