--- a/web/app/themes/huskies-theme/views/page/404.twig
+++ b/web/app/themes/huskies-theme/views/page/404.twig
@@ -1,15 +1,17 @@
 {% extends "layout/base.twig" %}
+{% from 'macro.twig' import abort %}
 
 {% block header %}
-  <div class="slideshow slideshow--no-images">
-    <h1 class="slideshow__title">{{ __('No page found', 'huskies') }}</h1>
-  </div>
+  {{ abort() }}
 {% endblock %}
 
 {% block content %}
 <section class="section">
-  <h1>{{ __('YOU SHALL NOT PASS!', 'huskies')}}</h1>
-  <h2>{{ __('Seriously, you can\'t ... the page doesn\'t exist.', 'huskies')}}</h2>
-  <img src="{{ site.theme.link }}/images/404.png" alt="404 illustration" />
+  <h2 class="center">{{ __("Unfortunately your requested page wasn't found.", 'huskies') }}</h2>
+  <p class="center">{{ __('If you think it is a mistake do not hesitate to contact us. Otherwise you can jump to the start page or choose one of the menu items.', 'huskies') }}</p>
+  <div class="form__section form__section--actions">
+    <a class="button" href="/kontakt"> {{ __('Contact', 'huskies') }} </a>
+    <a class="button button--primary" href="/"> {{ __('Start', 'huskies') }} </a>
+  </div>
 </section>
 {% endblock %}
