--- a/web/app/themes/huskies-theme/views/layout/base.twig
+++ b/web/app/themes/huskies-theme/views/layout/base.twig
@@ -26,7 +26,7 @@
 
     {{ function('wp_head') }}
   </head>
-  <body class="{{ body_class }}">
+  <body class="{{ body_class }} {% block body_class %}{% endblock %}">
     <div class="container">
       <header class="header-main">
         <nav class="header-nav clear">
