--- a/web/app/themes/huskies-theme/styles/post_short.less
+++ b/web/app/themes/huskies-theme/styles/post_short.less
@@ -14,10 +14,25 @@
 .post_short__title {
   align-self: flex-start;
   max-width: 75%;
+  display: inline-flex;
+  align-items: center;
+
+  > .icon {
+    margin-right: 10px;
+    width: 30px;
+    min-width: 30px;
+    height: 30px;
+    color: @c-blue;
+  }
 
   > a {
     color: @c-black;
     text-decoration: none;
+    flex: 1 1 auto;
+
+    > small {
+      display: block;
+    }
   }
 }
 
