--- a/web/app/themes/huskies-theme/styles/calendar.less
+++ b/web/app/themes/huskies-theme/styles/calendar.less
@@ -111,6 +111,7 @@
   .simcal-day-label {
     border: none !important;
     color: @c-blue !important;
+    background-color: transparent !important;
   }
 }
 
@@ -173,6 +174,7 @@
 }
 
 .simcal-events-dots,
-.simcal-event-title {
+.simcal-event-title,
+.simcal-align-right {
   display: none !important;
 }
