--- a/web/app/themes/huskies-theme/views/post/index.twig
+++ b/web/app/themes/huskies-theme/views/post/index.twig
@@ -15,10 +15,10 @@
 
     <nav class="pagination">
       {% if pagination.next %}
-        <a href="{{ pagination.next.link }}" class="pagination__link button button--primary">< {{ __('Older posts', 'huskies') }}</a>
+        <a href="{{ pagination.next.link }}" class="pagination__link pagination__link--placeholder button button--primary">< {{ __('Older posts', 'huskies') }}</a>
       {% endif %}
       {% if pagination.prev %}
-        <a href="{{ pagination.prev.link }}" class="pagination__link button button--primary">{{ __('Newer posts', 'huskies') }} ></a>
+        <a href="{{ pagination.prev.link }}" class="pagination__link pagination__link--placeholder button button--primary">{{ __('Newer posts', 'huskies') }} ></a>
       {% endif %}
     </nav>
   </section>
