make footer map editable from admin interface

--- a/web/app/themes/huskies-theme/styles/footer.less
+++ b/web/app/themes/huskies-theme/styles/footer.less
@@ -27,6 +27,9 @@
   border: 5px solid @c-white;
   display: block;
   margin: 0 auto 25px;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
 }
 
 .footer-menu {
