add own implementation for ajaxified login/register/lost password

--- a/web/app/themes/huskies-theme/styles/variables.less
+++ b/web/app/themes/huskies-theme/styles/variables.less
@@ -3,6 +3,8 @@
 @c-white: #FFFFFF;
 @c-grey: #F4F5F7;
 @c-grey-dark: darken(@c-grey, 15);
+@c-red: #FC5130;
+@c-green: #4EBF4C;
 
 @f-highlight: 'Nothing You Could Do', cursive;
 @f-normal: 'Lato', sans-serif;
