--- a/web/app/themes/huskies-theme/views/layout/forms/lost_password.twig
+++ b/web/app/themes/huskies-theme/views/layout/forms/lost_password.twig
@@ -1,12 +1,11 @@
-{% from 'macro.twig' import icon, modal %}
-{% from _self import content, footer %}
-
-{{ modal('lost-password-form', __('Lost Password', 'huskies'), content(), footer()) }}
+{% from 'layout/forms/base.twig' import render %}
+{% from _self import content %}
 
 {% macro content() %}
-  {% filter shortcodes %} [wppb-recover-password] {% endfilter %}
+  <fieldset class="form__section form__section--text-input">
+    <input type="text" id="user_login" name="user_login" required>
+    <label for="user_login">{{ __('user_login', 'huskies') }}</label>
+  </fieldset>
 {% endmacro %}
 
-{% macro footer() %}
-<a class="modal__trigger" href="#modal-login-form">{{ __('Already registered?', 'huskies') }}</a>
-{% endmacro %}
+{{ render(page, 'forgot', __('Forgot Password', 'huskies'), content()) }}
