--- a/web/app/themes/huskies-theme/views/macro.twig
+++ b/web/app/themes/huskies-theme/views/macro.twig
@@ -87,10 +87,10 @@
   {% do action('bbp_template_after_topics_loop') %}
 {% endmacro %}
 
-{% macro modal(id, title, content, footer = '') %}
+{% macro modal(id, title, content, footer = '', class = '') %}
   {% from _self import icon %}
 
-  <div class="modal__wrapper" id="modal-{{ id }}">
+  <div class="modal__wrapper {{ class }}" id="modal-{{ id }}">
     <div class="modal">
       <header class="modal__header">
         <h2 class="modal__title">{{ title }}</h2>
