--- a/web/app/themes/huskies-theme/style.css
+++ b/web/app/themes/huskies-theme/style.css
@@ -5,6 +5,7 @@ Description: The theme for the ultimate huskies website
 Author: Mupat
 Author URI: http://mupat.net
 Version: 1.0
+Text Domain: huskies
 
 License: GNU General Public License version 3.0
 License URI: http://www.gnu.org/licenses/gpl-3.0
