--- a/web/app/themes/huskies-theme/styles/main_menu.less
+++ b/web/app/themes/huskies-theme/styles/main_menu.less
@@ -105,6 +105,11 @@
   position: relative;
   text-align: center;
   line-height: 2.5;
+
+  &.main_menu__link--small {
+    font-size: @fs-l;
+    line-height: 1.8;
+  }
 }
 
 .main_menu__badge {
