add only handling for set new password and deactivate wp_login

--- a/web/app/themes/huskies-theme/views/layout/base.twig
+++ b/web/app/themes/huskies-theme/views/layout/base.twig
@@ -58,6 +58,10 @@
       {% include 'layout/forms/login.twig' %}
       {% include 'layout/forms/register.twig' %}
       {% include 'layout/forms/lost_password.twig' %}
+
+      {% if page.set_new_password.show %}
+        {% include 'layout/forms/set_new_password.twig' %}
+      {% endif %}
     {% endif %}
 
     {% block modal %}{% endblock %}
