--- a/web/app/themes/huskies-theme/views/layout/base.twig
+++ b/web/app/themes/huskies-theme/views/layout/base.twig
@@ -21,8 +21,15 @@
     <link rel="profile" href="http://gmpg.org/xfn/11" />
     <link rel="pingback" href="{{ site.pingback_url }}" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} feed" href="{{ site.rss2_url }}" />
-    <link rel="shortcut icon" href="{{ site.theme.link }}/images/favicon.ico" />
-    <link rel="apple-touch-icon" href="{{ site.theme.link }}/images/apple-touch-icon.png"/>
+
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ site.theme.link }}/images/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="{{ site.theme.link }}/images/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="{{ site.theme.link }}/images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{{ site.theme.link }}/images/favicon-16x16.png" sizes="16x16" />
+
+    <meta name="application-name" content="Ultimate Huskies"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="{{ site.theme.link }}/images/mstile-144x144.png" />
 
     {{ function('wp_head') }}
   </head>
