--- a/web/app/themes/huskies-theme/views/macro.twig
+++ b/web/app/themes/huskies-theme/views/macro.twig
@@ -93,17 +93,18 @@
   <div class="modal__wrapper {{ class }}" id="modal-{{ id }}">
     <div class="modal">
       <header class="modal__header">
-        <h2 class="modal__title">{{ title }}</h2>
+        <a href="{{ site.url }}" class="modal__logo">
+          <svg><use xlink:href="#logo-font" width="100%" height="100%"></use></svg>
+        </a>
         <button class="modal__close modal__close--button" type="button">{{ icon('plus') }}</button>
       </header>
 
       <main class="modal__content">
+        <h1 class="section__title">{{ title }}</h1>
         {{ content }}
       </main>
 
-      <footer class="modal__footer">
-        {{ footer }}
-      </footer>
+      <footer class="modal__footer">{{ footer }}</footer>
     </div>
   </div>
 {% endmacro %}
@@ -118,5 +119,5 @@
 {% endmacro %}
 
 {% macro password_strength_meter(pass1_id, pass2_id) %}
-  <p id="password-strength-meter" data-pass1="{{ pass1_id }}" data-pass2="{{ pass2_id }}" data-states="{{ __('short,bad,good,strong,mismatch','huskies') }}"></p>
+  <p id="password-strength-meter" data-pass1="{{ pass1_id }}" data-pass2="{{ pass2_id }}" data-states="{{ __('very bad, bad, good, strong, very strong, mismatch','huskies') }}"></p>
 {% endmacro %}
