small fixes before deploy

--- a/web/app/themes/huskies-theme/styles/account_form.less
+++ b/web/app/themes/huskies-theme/styles/account_form.less
@@ -10,7 +10,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: fade(@c-white, 75%);
+  background-color: fade(@c-black, 75%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,10 +21,9 @@
   > .icon {
     width: 100px;
     height: 100px;
-    color: @c-black;
+    color: @c-blue;
     animation: rotate 1s linear infinite;
     animation-play-state: paused;
-    background-color: @c-white;
   }
 
   &.account-form__loader--visible {
