--- a/web/app/themes/huskies-theme/styles/buttons.less
+++ b/web/app/themes/huskies-theme/styles/buttons.less
@@ -13,8 +13,8 @@
 
   &:hover {
     background-color: transparent;
-    color: @c-black;
-    border-color: @c-black;
+    color: @c-grey-dark;
+    border-color: @c-grey-dark;
   }
 
   &.button--primary {
@@ -29,8 +29,8 @@
 
   &.button--secondary {
     background-color: transparent;
-    color: @c-black;
-    border-color: @c-black;
+    color: @c-grey-dark;
+    border-color: @c-grey-dark;
 
     &:hover {
       color: @c-blue;
