--- a/web/app/themes/huskies-theme/views/forum/forms/base.twig
+++ b/web/app/themes/huskies-theme/views/forum/forms/base.twig
@@ -37,7 +37,7 @@
   </div>
 
   <fieldset class="form__section form__section--actions">
-    <input type="reset" class="button modal__close" value="{{ __('Close', 'huskies') }}">
+    <input type="reset" class="button modal__close" value={{ __('Close', 'huskies') }}>
     <input type="submit" id="bbp_topic_submit" name="bbp_topic_submit" class="button button--primary" value="{% block form_submit_value %}{% endblock %}" tabindex="{{ page.bbress.tabindex }}" />
   </fieldset>
 
