--- a/web/app/themes/huskies-theme/views/layout/forms/base.twig
+++ b/web/app/themes/huskies-theme/views/layout/forms/base.twig
@@ -19,7 +19,7 @@
     {{ content }}
 
     <fieldset class="form__section form__section--actions">
-      <input type="submit" class="button button--primary" value="{{ __('Submit', 'huskies') }}"  />
+      <input type="submit" class="button button--primary" value={{ __('Submit', 'huskies') }} />
     </fieldset>
   </form>
 {% endmacro %}
