--- a/web/app/themes/huskies-theme/views/forum/forms/base.twig
+++ b/web/app/themes/huskies-theme/views/forum/forms/base.twig
@@ -2,7 +2,9 @@
 
 {% block form_infos %}{% endblock %}
 
-<form method="post" action="{% block form_action %}{% endblock %}" class="form">
+<form method="post" action="{% block form_action %}{% endblock %}" class="form" enctype="multipart/form-data">
+  <input type="hidden" name="bbp_forum_id" value="{{ forum.id }}" />
+  <input type="hidden" name="post_parent" value="{{ topic.id }}" />
   {% block form_inputs %}{% endblock %}
 
   <p class="form__infos">
