fix not working answer creation

--- a/web/app/themes/huskies-theme/styles/header.less
+++ b/web/app/themes/huskies-theme/styles/header.less
@@ -91,7 +91,11 @@
   background-color: @c-white;
   box-shadow:0 2px 5px fade(@c-black, 25%);
 
-  .header-nav__logo,
+  .header-nav__logo {
+    opacity: 1;
+    visibility: visible;
+  }
+
   .header-nav__addition-button {
     box-shadow: 0 2px 5px fade(@c-black, 25%);
     background-color: @c-blue;
