--- a/web/app/themes/huskies-theme/views/layout/footer.twig
+++ b/web/app/themes/huskies-theme/views/layout/footer.twig
@@ -15,6 +15,11 @@
     </a>
   </li>
   <li class="footer-menu__item">
+    <a href="https://www.instagram.com/ultimate.huskies.berlin/">
+      {{ icon('instagram') }}
+    </a>
+  </li>
+  <li class="footer-menu__item">
     <a href="https://github.com/Ultimate-Huskies">
       {{ icon('github') }}
     </a>
